tests/snapshots/keys__insta_keys_btab.snap
---
source: tests/keys.rs
expression: h.buffer_view()
---
"                                                                                "
"                                                                                "
"  20                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"  11                                                                            "
"  10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  20/20                                                                      0/0"
">                                                                               "
